# sdl_demo

./: .gitignore  CMakeLists.txt  build.py  sdl_democonfig.h.in
src/: main.cc
